added content to credentials section

--- a/index.html
+++ b/index.html
@@ -8,11 +8,38 @@
 </head>
 <body>
     <div class="container">
-        <div class="credentials">
-
+        <div class="credentials" style="text-align: center;">
+            <span class="myname">
+                <strong>RICHARD KAFUI ANATSUI</strong> 
+            </span>
+            <br>
+            <span class="location">
+                Dansoman - Accra, Ghana
+            </span>
+            <br>
+            <span class="telephone"><strong>T:</strong> +233205030128</span>
+            |
+            <span class="nationality"><strong>N:</strong> Ghanaian</span>
+            |
+            <span class="email"><strong>E:</strong> richard.anatsui@ashesi.edu.gh</span>
+            <br>
+            <span class="linkedin"><strong>L:</strong> https://www.linkedin.com/in/richard-kafui-anatsu</span>
+            <br>
+            <span class="github"><strong>G:</strong> https://github.com/rich5k</span>
         </div>
         <div class="education">
-
+            <strong class="edu-title">
+                EDUCATION
+            </strong>
+            <hr>
+            <br>
+            <strong class="uni">
+                Ashesi University
+            </strong>
+            <strong class="uni-location" style="text-align: right;">
+                Berekusu, Eastern Region
+            </strong>
+            <br>
         </div>
         <div class="achievements">
 
