added content to education section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Richard Anatsui's CV</title>
+    <link rel="stylesheet" href="./bootstrap.min.css">
 </head>
 <body>
     <div class="container">
@@ -23,7 +24,7 @@
             |
             <span class="email"><strong>E:</strong> richard.anatsui@ashesi.edu.gh</span>
             <br>
-            <span class="linkedin"><strong>L:</strong> https://www.linkedin.com/in/richard-kafui-anatsu</span>
+            <span class="linkedin"><strong>L:</strong> https://www.linkedin.com/in/richard-kafui-anatsui</span>
             <br>
             <span class="github"><strong>G:</strong> https://github.com/rich5k</span>
         </div>
@@ -36,10 +37,19 @@
             <strong class="uni">
                 Ashesi University
             </strong>
-            <strong class="uni-location" style="text-align: right;">
+            <strong class="uni-location" style="margin-left: 70%;">
                 Berekusu, Eastern Region
             </strong>
             <br>
+            <span class="major">
+                BSc. Computer Science
+            </span>
+            <strong class="grad-year" style="margin-left: 58%;">
+                Expected year of graduation: July 2022
+            </strong>
+            <br>
+            <strong class="coursework">Relevant Coursework:</strong> Databases, Algorithm Design & Analysis, Data Structures, Discrete Structures, 
+Software Engineering, Web Technologies, Operating Systems
         </div>
         <div class="achievements">
 
