added content to achievements section

--- a/index.html
+++ b/index.html
@@ -49,10 +49,37 @@
             </strong>
             <br>
             <strong class="coursework">Relevant Coursework:</strong> Databases, Algorithm Design & Analysis, Data Structures, Discrete Structures, 
-Software Engineering, Web Technologies, Operating Systems
+                Software Engineering, Web Technologies, Operating Systems
         </div>
         <div class="achievements">
-
+            <strong class="ach-title">
+                ACHIEVEMENTS
+            </strong>
+            <hr>
+            <br>
+            <strong class="dList">
+                Dean's List,
+            </strong>
+            Ashesi University
+            <strong class="dList-time" style="margin-left: 70%;">
+                2018 - 2021
+            </strong>
+            <br>
+            <strong class="scholar">
+                Scholar,
+            </strong>
+            Ashesi Financial Aid, Ashesi University
+            <strong class="scholar-time" style="margin-left: 70%;">
+                2018 - 2022
+            </strong>
+            <br>
+            <strong class="shs">
+                Class Salutatorian,
+            </strong>
+            Accra Academy
+            <strong class="shs-time" style="margin-left: 70%;">
+                2018
+            </strong>
         </div>
         <div class="project-research">
 
