added content to references section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         </div>
         <div class="references">
-            
+            Available upon request.
         </div>
     </div>
 </body>
