added content to references section and added margins to all sections

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <br>
             <span class="github"><strong>G:</strong> https://github.com/rich5k</span>
         </div>
-        <div class="education">
+        <div class="education" style="margin-bottom: 10px">
             <strong class="edu-title">
                 EDUCATION
             </strong>
             <hr>
-            <br>
+            
             <strong class="uni">
                 Ashesi University
             </strong>
@@ -51,12 +51,12 @@
             <strong class="coursework">Relevant Coursework:</strong> Databases, Algorithm Design & Analysis, Data Structures, Discrete Structures, 
                 Software Engineering, Web Technologies, Operating Systems
         </div>
-        <div class="achievements">
+        <div class="achievements" style="margin-bottom: 10px">
             <strong class="ach-title">
                 ACHIEVEMENTS
             </strong>
             <hr>
-            <br>
+            
             <strong class="dList">
                 Dean's List,
             </strong>
@@ -81,16 +81,20 @@
                 2018
             </strong>
         </div>
-        <div class="project-research">
+        <div class="project-research" style="margin-bottom: 10px">
 
         </div>
-        <div class="leadership-activities">
+        <div class="leadership-activities" style="margin-bottom: 10px">
 
         </div>
-        <div class="skills">
+        <div class="skills" style="margin-bottom: 10px">
 
         </div>
-        <div class="references">
+        <div class="references" style="margin-bottom: 10px">
+            <strong class="ref-title">
+                REFERENCES
+            </strong>
+            <hr>
             Available upon request.
         </div>
     </div>
