added content to projects section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,44 @@
             </strong>
         </div>
         <div class="project-research" style="margin-bottom: 10px">
-
+            <strong class="ach-title">
+                PROJECTS AND RESEARCH
+            </strong>
+            <hr>
+            
+            <strong class="lumen">
+                Ashesi University, Lumen(Entrepreneurial Business)
+            </strong>
+            <strong class="lumen-time" style="margin-left: 46%;">
+                December,2018 - June,2019
+            </strong>
+            <br> 
+            <ul>
+                <li>Helped students to save spare change at on-campus ventures</li>
+                <li>Built a savings app to keep tack of spare change</li>
+            </ul>    
+            <strong class="amind">
+                Arrow-Minded Technologies (I.T. Business)
+            </strong>
+            <strong class="amind-time" style="margin-left: 54%;">
+                June,2019 - March,2020
+            </strong>
+            <br> 
+            <ul>
+                <li>Sold ethernet cables, wireless mouse, phone and laptop repairs</li>
+                <li>Built a website for Sowseeds International Ministries</li>
+            </ul>  
+            <strong class="github">
+                Git-hub Portfolio
+            </strong>
+            <strong class="github-time" style="margin-left: 74%;">
+                June,2019 - Present
+            </strong>
+            <br> 
+            <ul>
+                <li>Beatbox App: https://richie-beatbox.netlify.app/</li>
+                <li>Amazon clone: https://clone-a7207.web.app/</li>
+            </ul>     
         </div>
         <div class="leadership-activities" style="margin-bottom: 10px">
 
