added content to leadership section

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </strong>
         </div>
         <div class="project-research" style="margin-bottom: 10px">
-            <strong class="ach-title">
+            <strong class="proj-title">
                 PROJECTS AND RESEARCH
             </strong>
             <hr>
@@ -122,7 +122,36 @@
             </ul>     
         </div>
         <div class="leadership-activities" style="margin-bottom: 10px">
-
+            <strong class="ach-title">
+                LEADERSHIP AND CO-CURRICULUM ACTIVITIES
+            </strong>
+            <hr>
+            
+            <strong class="dsc">
+                Ashesi University- Developer Student Club 
+            </strong>
+            <strong class="dsc-time" style="margin-left: 57%;">
+                Sept,2018 - Present
+            </strong>
+            <br> 
+            Member:
+            <ul>
+                <li>Learnt JavaScript, and Bootstrap</li>
+                <li>Won third place out of ten teams in Hackathon December 2018 building a campus e-mart for 
+students, using HTML, CSS, JavaScript and Laravel</li>
+                <li>Got a Google Cloud Badge</li>
+            </ul>    
+            <strong class="ptutor">
+                Ashesi University- Programming Tutor
+            </strong>
+            <strong class="ptutor-time" style="margin-left: 59%;">
+                Sept,2019 - Dec,2019
+            </strong>
+            <br> 
+            <ul>
+                <li>Taught students that struggled in programming courses</li>
+                <li>Assisted students in tackling programming projects and problems</li>
+            </ul> 
         </div>
         <div class="skills" style="margin-bottom: 10px">
 
